busca de endereço automática

--- a/src/Ecoffe.Frontend/src/app/components/personal-info/personal-info.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/personal-info/personal-info.component.html
@@ -17,25 +17,25 @@
             </mat-form-field>
         <h2>Endereço</h2>
             <mat-form-field style="width: 15%; min-width: 80px;">
-                <input matInput placeholder="CEP" mask="00000-000" required [disabled]="disabledInputs" [(ngModel)]="endereco.cep" name="endereco_Cep">
+                <input matInput placeholder="CEP" (keyup)="getAdress()" mask="00000-000" [disabled]="disabledInputs" [(ngModel)]="endereco.cep" name="endereco_Cep">
             </mat-form-field>
             <mat-form-field style="width: 55%; min-width: 200px;">
-                <input matInput placeholder="Rua" required [disabled]="disabledInputs" [(ngModel)]="endereco.rua" name="endereco_Rua">
+                <input matInput placeholder="Rua" [disabled]="disabledInputs" [(ngModel)]="endereco.rua" name="endereco_Rua">
             </mat-form-field>
             <mat-form-field style="width: 10%; min-width: 30px;">
-                <input matInput placeholder="Número" mask="0*" required [disabled]="disabledInputs" [(ngModel)]="endereco.numero" name="endereco_Numero">
+                <input matInput placeholder="Número" mask="0*" [disabled]="disabledInputs" [(ngModel)]="endereco.numero" name="endereco_Numero">
             </mat-form-field>
             <mat-form-field style="width: 15%; min-width: 100px;">
                 <input matInput placeholder="Complemento" [disabled]="disabledInputs" [(ngModel)]="endereco.complemento" name="endereco_Complemento">
             </mat-form-field>
-            <mat-form-field style="width: 20%; min-width: 100px;">
-                <input matInput placeholder="Bairro" required [disabled]="disabledInputs" [(ngModel)]="endereco.Bairro" name="endereco_Bairro">
+            <mat-form-field style="width: 32%; min-width: 100px;">
+                <input matInput placeholder="Bairro" [disabled]="disabledInputs" [(ngModel)]="endereco.bairro" name="endereco_Bairro">
             </mat-form-field>
             <mat-form-field style="width: 20%; min-width: 100px;">
-                <input matInput placeholder="Cidade" required [disabled]="disabledInputs" [(ngModel)]="endereco.cidade" name="endereco_Cidade">
+                <input matInput placeholder="Cidade" [disabled]="disabledInputs" [(ngModel)]="endereco.cidade" name="endereco_Cidade">
             </mat-form-field>
             <mat-form-field style="width: 10%; min-width: 30px;">
-                <input matInput placeholder="UF" mask="AA" required [disabled]="disabledInputs" [(ngModel)]="endereco.uf" name="endereco_Uf">
+                <input matInput placeholder="UF" mask="AA" [disabled]="disabledInputs" [(ngModel)]="endereco.uf" name="endereco_Uf">
             </mat-form-field>
     </form>
     <button mat-raised-button *ngIf="disabledInputs == true" (click)="toggleDisabledInputs()" color="primary">
