--- a/src/Ecoffe.Frontend/src/app/components/personal-info/personal-info.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/personal-info/personal-info.component.html
@@ -1,3 +1,6 @@
+<mat-card *ngIf="validateErrors.length > 0" style="background-color: rgb(255, 175, 175);">
+    <p *ngFor="let error of validateErrors">{{ error }}</p>
+</mat-card>
 <mat-card>
     <mat-card-title>Informações Pessoais</mat-card-title>
     <form>
