--- a/src/Ecoffe.Frontend/src/app/views/home/home.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/home/home.component.html
@@ -1,21 +1,21 @@
 <app-header></app-header>
 <!-- Card 1 -->
-<mat-card class="card1">
-    <section class="Container1">
-        <div style="margin-left: 280px;">
+<mat-card>
+    <div class="Container1">
+        <div id="DivTexto">
             <h4 class="verm">Titulo Produto</h4>
             <p id="quebraLinha">Descrição do Produto blabalbalbalblablabllab Lorem ipsum dolor sit amet</p>
             <p class="verm">R$49,90</p>
             <button mat-flat-button class="Button">Buy Now</button>
         </div>
-        <div>
+        <div id="DivTexto">
             <img src="../../../assets/cafe1.jpg" alt="Img do Produto mais vendido" class="img">
         </div>
-        <div>
+        <div id="Parte3">
             <img src="../../../assets/cafe1.jpg" alt="img do Segundo Produto mais vendido" class="img2">
             <img src="../../../assets/cafe1.jpg" alt="img do Terceiro Produto mais vendido" class="img2">
         </div>
-    </section>
+    </div>
         
 </mat-card>
     <br>
