--- a/src/Ecoffe.Frontend/src/app/views/home/home.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/home/home.component.html
@@ -21,42 +21,44 @@
         <mat-card>
             <section class="ContainerCima">
                 <div>
-                    <h1 class="verm" id="quebraLinhaTitle">Midnight <span style="color: black;">Frappuccino</span></h1>
-                    <p id="quebraLinha" style="color: black;">The Midnight mint Mocha Frappuccino features extra dark cocoa blended with Frappuccino Roast coffee.</p>
-                    <p class="verm">R$49,90</p>
-                    <button mat-flat-button class="Button">Buy Now</button>
+                    <mat-card-title>
+                        <h1 class="verm" id="quebraLinhaTitle">Midnigh Frappuccino</h1>
+                    </mat-card-title>
+                    <mat-card-subtitle>
+                        <p id="quebraLinha" style="color: black;">The Midnight mint Mocha Frappuccino features extra dark cocoa blended with Frappuccino Roast coffee.</p>
+                        <p class="verm" id="price">R$49,90</p>
+                        <button mat-flat-button class="Button">Buy Now</button>
+                    </mat-card-subtitle>
                 </div>
                 <div>
                     <img src="../../../assets/img1.png" alt="Img do Produto mais vendido" class="img">
                 </div>
                 <div>
-                    <img src="../../../assets/img2.png" alt="img do Segundo Produto mais vendido" class="img2">
-                    <img src="../../../assets/img3.png" alt="img do Terceiro Produto mais vendido" class="img2">
+                    <img id="img2" src="../../../assets/img2.png" alt="img do Segundo Produto mais vendido" class="img2" (click)="troca()">
+                    <img id="img3" src="../../../assets/img3.png" alt="img do Terceiro Produto mais vendido" class="img2" (click)="troca2()">
                 </div>
             </section>
         </mat-card>
 
+        
 
     <br>
 <!-- Card 2 -->
 <mat-card>
     <section class="Container">
         <div>
-            <img src="../../../assets/img4.png" alt="img produto mais votado" class="imagem">
+            <img mat-card-image src="../../../assets/img4.png" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
         <div>
-            <img src="../../../assets/img5.png" alt="img produto mais votado" class="imagem">
+            <img mat-card-image src="../../../assets/img5.png" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
         <div>
-            <img src="../../../assets/img6.png" alt="img produto mais votado" class="imagem">
+            <img mat-card-image src="../../../assets/img6.png" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
-        <div>
-            <img src="../../../assets/cafe1.jpg" alt="img produto mais votado" class="imagem">
-            <p>Titulo produto</p>
-        </div>
+        
     </section>
 </mat-card>
 <br><br>
