Troca de produtos concluída
Troca de produtos concluída

--- a/src/Ecoffe.Frontend/src/app/views/home/home.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/home/home.component.html
@@ -34,8 +34,8 @@
                     <img src="../../../assets/img1.png" alt="Img do Produto mais vendido" class="img">
                 </div>
                 <div>
-                    <img id="img2" src="../../../assets/img2.png" alt="img do Segundo Produto mais vendido" class="img2" (click)="troca()">
-                    <img id="img3" src="../../../assets/img3.png" alt="img do Terceiro Produto mais vendido" class="img2" (click)="troca2()">
+                    <img id="img2" src="../../../assets/img1.png" alt="img do Segundo Produto mais vendido" class="img2" (click)="troca('Midnigh Frappuccino','The Midnight mint Mocha Frappuccino features extra dark cocoa blended with Frappuccino Roast coffee.','R$49,90','../../../assets/img1.png')">
+                    <img id="img3" src="../../../assets/img3.png" alt="img do Terceiro Produto mais vendido" class="img2" (click)="troca2('Cookies','Deliciosos Cookies de chocolate com gotas de Chocolate Branco e pedaços de cacau','R$28,49','../../../assets/img3.png')">
                 </div>
             </section>
         </mat-card>
