--- a/src/Ecoffe.Frontend/src/app/views/account/account.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/account/account.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-cart-sidenav></app-cart-sidenav>
 
 <mat-card class="miniNav">
     <button mat-flat-button (click)="changeArea(1)" color="basic">Informações Pessoais</button>
