progresso sidenav carrinho

--- a/src/Ecoffe.Frontend/src/app/components/cart-sidenav/cart-sidenav.component.css
+++ b/src/Ecoffe.Frontend/src/app/components/cart-sidenav/cart-sidenav.component.css
@@ -17,3 +17,15 @@ mat-sidenav-container{
     display: flex;
     float: right;
 }
+
+.closeButton{
+    all:unset;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 5px;
+    margin: 5px;
+    line-height: 14px;
+    min-width: auto;
+    cursor: pointer;
+}
