--- a/src/Ecoffe.Frontend/src/app/components/cart-sidenav/cart-sidenav.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/cart-sidenav/cart-sidenav.component.html
@@ -1,11 +1,5 @@
 <mat-sidenav-container>
-    <mat-sidenav position="end" mode="over" [(opened)]="opened">
-        
-        Sidenav
-        <button (click)="opened=!opened">fechar</button>
-    
+    <mat-sidenav position="end" mode="over" [opened]="isCartSidenavOpened">      
+        <button class="closeButton" (click)="toggleCartSidenav()">X</button> 
     </mat-sidenav>
-    <mat-sidenav-content>Main
-        <button (click)="opened=!opened">toggle</button>        
-    </mat-sidenav-content>
 </mat-sidenav-container>
