product details without backend

--- a/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
@@ -19,6 +19,6 @@
                     </path>
                 </svg>
             </button>
-        <img class="cart" src="/assets/12b07d7d7dbde76a3a687552d50d397f.png" (click)="toggleCartSidenav()">  
+        <img class="cart" src="/assets/12b07d7d7dbde76a3a687552d50d397f.png">  
         </div>
 </mat-toolbar>
