--- a/src/Ecoffe.Frontend/src/app/views/login-register/login-register.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/login-register/login-register.component.html
@@ -16,8 +16,8 @@
             </mat-form-field>
         </form>
         <a href="" id="Link"><strong>Esqueceu a senha ?</strong> </a>
-        <button mat-raised-button (click)="login()" color="primary" id="button">
-            Entrar
+        <button mat-raised-button color="primary" id="button">
+            Entrar 
         </button>
     </mat-card>
 
