purchase-finish - forma de pagamento

--- a/src/Ecoffe.Frontend/src/app/components/purchase-finish/purchase-finish.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/purchase-finish/purchase-finish.component.html
@@ -27,7 +27,7 @@
 
 <mat-card>
     <mat-card-title>Forma de Pagamento</mat-card-title>
-    <mat-form-field appearance="fill" style="width: 250px;">
+    <mat-form-field appearance="fill" style="width: 15%; min-width: 180px;">
         <mat-label>Forma de pagamento</mat-label>
         <mat-select [(ngModel)]="formaPagamentoSelected" (selectionChange)="loadCardList()">
           <mat-option *ngFor="let enum of formaPagamentoLabel | keyvalue" [value]="enum">
@@ -36,7 +36,7 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field appearance="fill" style="width: 600px;" *ngIf="formaPagamentoSelected?.key == 0 || formaPagamentoSelected?.key == 1">
+      <mat-form-field appearance="fill" style="width: 50%; min-width: 350px;" *ngIf="formaPagamentoSelected?.key == 0 || formaPagamentoSelected?.key == 1">
         <mat-label>Selecione um cartão</mat-label>
         <mat-select [(ngModel)]="cardSelected">
           <mat-option *ngFor="let card of cardList" [value]="card">
@@ -45,7 +45,7 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field appearance="fill" style="width: 200px;" *ngIf="formaPagamentoSelected?.key == 1">
+      <mat-form-field appearance="fill" style="width: 20%; min-width: 200px;" *ngIf="formaPagamentoSelected?.key == 1">
         <mat-label>Parcelas</mat-label>
         <mat-select [(ngModel)]="parcelas">
           <mat-option *ngFor="let number of [1,2,3,4,5,6,7,8,9,10,11,12]" [value]="number">
@@ -53,6 +53,10 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
+
+      <button mat-flat-button color="primary" (click)="openCardNewModal()" *ngIf="formaPagamentoSelected?.key == 0 || formaPagamentoSelected?.key == 1">
+        Novo cartão
+      </button>
 
 </mat-card>
 
