carrinho com botao funcional

--- a/src/Ecoffe.Frontend/src/app/components/purchase-finish/purchase-finish.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/purchase-finish/purchase-finish.component.html
@@ -93,6 +93,6 @@
     </mat-form-field>
 </mat-card>
 
-<button mat-flat-button color="primary" (click)="savePurchase()">
+<button mat-flat-button color="primary" (click)="savePurchase()" style="margin: 1rem 0 0 2rem">
     Finalizar compra
 </button>
